<resources>
    <string name="app_name">ITManagement</string>
    <string name="manage_it">MANAGE IT</string>
    <string name="log_in_banner">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="titleregister">Registration</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="register_account">register account</string>
    <string name="last_name">Last Name</string>
    <string name="reset_password">RESET PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>